@@ -1,3 +1,5 @@
+* Remove warehouse
+
 Version 2.2.0 - 2011-10-25
 * Bug fixes (see mercurial logs for details)
 
